RESOLVED FIXED268512
(REGRESSION) First letter of URL is cropped off in X (Twitter) timeline
https://bugs.webkit.org/show_bug.cgi?id=268512
Summary (REGRESSION) First letter of URL is cropped off in X (Twitter) timeline
alan
Reported 2024-01-31 16:45:17 PST
Attachments
Patch (2.26 KB, patch)
2024-01-31 16:48 PST, alan
no flags
[fast-cq]Patch (6.80 KB, patch)
2024-01-31 20:18 PST, alan
no flags
Ahmad Saleem
Comment 1 2024-01-31 16:48:25 PST
Oh! I thought it was Twitter (X) issue and never reported. My bad..
alan
Comment 2 2024-01-31 16:48:31 PST
alan
Comment 3 2024-01-31 16:52:10 PST
(In reply to Ahmad Saleem from comment #1) > Oh! I thought it was Twitter (X) issue and never reported. My bad.. no worries, all broken things get eventually reported.
alan
Comment 4 2024-01-31 20:18:04 PST
Created attachment 469643 [details] [fast-cq]Patch
EWS
Comment 5 2024-02-01 11:04:13 PST
Committed 273927@main (e311b7b2adbd): <https://commits.webkit.org/273927@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469643 [details].
Radar WebKit Bug Importer
Comment 6 2024-02-01 11:05:14 PST
Note You need to log in before you can comment on or make changes to this bug.