(REGRESSION) First letter of URL is cropped off in X (Twitter) timeline https://bugs.webkit.org/show_bug.cgi?id=268512 <rdar://121891210>

Reviewed by Antti Koivisto.

Custom font reports negative advance width for '/' character. We incorrectly offset adjacent inline content producing cropped rendering.

* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::width):

Canonical link: https://commits.webkit.org/273927@main